--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,13 @@ body {
 }
 
 h1 {
-  margin-top: 0;
+  margin-top: 50px;
   margin-bottom: 50px;
+  font-weight: 100;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  color: DarkSlateGray;
+  font-size: 25px;
 }
 
 td {
